# ipca-forecasting-python

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/: pr_template.md
data/: cambio.json  desocupacao.json  from_2001_to_2012.json  from_2013.json  historical_data.json  icc.json  m2.json  selic.json
forecast_model/: main.py  models.py  utils.py
ingestion/: api.py  aws.py  data_sources.json  duck.py  models.py  pipeline.py  utils.py
src/: data_ingestion.py  data_processing.py  main.py  model.py
src/tests/: results.json
src/utils/: bot.py  utils.py
terraform/datalake/: backend.tf  buckets.tf  buckets_objects.tf  dev.tfvars  locals.tf  providers.tf  variables.tf  versions.tf
terraform/datalake/source/: bcb.json  sidra.json
terraform/modules/buckets/: buckets.tf  locals.tf  variables.tf
test/ingestion/: test_models.py
transform/ipca_forecasting/: .user.yml  dbt_project.yml  packages.yml  profiles.yml
transform/ipca_forecasting/macros/: export_data_partition.sql  import_bcb_json.sql  paths.sql
transform/ipca_forecasting/models/bronze/: agregado_monetario_m2.sql  alimentacao_e_bebidas.sql  bens_nao_duraveis.sql  comercializaveis.sql  despesas_pessoais.sql  duraveis.sql  educacao.sql  habitacao.sql  icc.sql  ipca.sql  m2.sql  nao_comercializaveis.sql  nucleo.sql  precos_monitorados_energia_eletrica.sql  precos_monitorados_gas_de_bujao.sql  precos_monitorados_gasolina.sql  precos_monitorados_iptu.sql  precos_monitorados_metro.sql  precos_monitorados_oleo_diesel.sql  selic.sql  (+5 more)
(+21 files in other folders)
